spacing issue homebox

--- a/friendfund/partners/ff/public/css/site.css
+++ b/friendfund/partners/ff/public/css/site.css
@@ -687,7 +687,7 @@ div.timeCounter {
 	padding: 0 0 0 0;
 	display: block;
 	width: 100%;
-	margin: 30px auto 0 auto;
+	margin: 10px auto 0 auto;
 	position: relative
 }
 div.subHeader .timeCounter {
